<resources>
    <string name="app_name">ProyectoMiravereda</string>
    <string-array name="Spinner_items_idiomas">
        <item>Castellano</item>
        <item>Valenciano</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="Spinner_items_tema">
        <item>Sistema</item>
        <item>Oscuro</item>
        <item>Claro</item>
    </string-array>

    <!-- Preferencias -->
    <string name="Idioma">Idioma</string>
    <string name="Tema">Tema</string>
    <string name="URLservidor">Ruta del servidor: http://10.249.159.10:8080/</string>
    <string name="URLAPI">Endpoints API Rest: http://10.249.159.10:8080/api/</string>

    <!-- Cambiar contraseña -->
    <string name="ResetCorreo">Correo</string>
    <string name="ResetContrasenya">Nueva contraseña</string>
    <string name="ResetBoton">CAMBIAR CONTRASEÑA</string>
    <string name="ResetRellenarCampos">Rellena todos los campos</string>

    <!-- Login -->
    <string name="loginPlaceHolderCliente">Introduce tu correo</string>
    <string name="loginPlaceHolderContrasena">Introduce tu contraseña</string>
    <string name="loginTextOlvidadoContra">¿Has olvidado tu contraseña?</string>
    <string name="loginTextIniciarSesion">INICIAR SESIÓN</string>
    <string name="loginTextCrearCuenta">¿No tienes una cuenta? CREAR CUENTA</string>

    <!-- Carrito -->
    <string name="carritoConfirmarCompra">CONFIRMAR COMPRA</string>
    <string name="carritoTotal">TOTAL: </string>

    <!-- View Holder Peliculas -->
    <string name="viewholderNotaMedia">"Nota media: "</string>
    <!-- View Holder Carrito -->
    <string name="viewholderPrecio">Precio: </string>

    <!-- Informacion pelicula -->
    <string name="informacionNotaPelicula">Nota: </string>
    <string name="informacionNotaMedia">"Nota media: "</string>
    <string name="informacionPrecio">Precio: </string>
    <string name="informacionAñadirCarrito">Añadir al carrito</string>
    <string name="informacionSinopsis">Sinopsis</string>
    <string name="informacionDirector">Director: </string>
    <string name="informacionValorar">Valorar</string>

    <!-- Activity crear -->
    <string name="crearNombre">Nombre</string>
    <string name="crearApellidos">Apellidos</string>
    <string name="crearCodigoPostal">Código postal</string>
    <string name="crearDomicilio">Domicilio</string>
    <string name="crearNumeroTarjeta">Núm tarjeta</string>
    <string name="crearCorreo">Correo electrónico</string>
    <string name="crearContrasenya">Contraseña</string>
    <string name="crearCuenta">CREAR CUENTA</string>

    <!-- Tostadas -->
    <string name="toastErrorAñadirContenido">Error al añadir contenido al carrito: </string>
    <string name="toastErrorValorar">Error al valorar: </string>
    <string name="toastCarritoVacio2">El carrito está vacío, no puedes realizar una compra</string>
    <string name="toastLanzandoCatalogo">Lanzando catalogo...</string>
    <string name="tostadaRellenarCampos">Por favor, rellena todos los campos</string>
    <string name="tostadaLogin">Sesión iniciada correctamente</string>
    <string name="tostadaCredencialesIncorrectas">Credenciales incorrectas</string>
    <string name="tostadaErrorRed">Error de red, por favor intente más tarde.</string>
    <string name="toastSesionNoIniciada">No hay una sesión iniciada</string>
    <string name="toastErrorCargandoContenidos">Error cargando contenidos</string>
    <string name="toastEliminarCarrito">Contenido eliminado del carrito</string>
    <string name="toastErrorEliminar">Error al eliminar: </string>
    <string name="toastErrorDesconocido">Error desconocido</string>
    <string name="toastErrorID">No se encontró el ID del cliente. Por favor inicia sesión.</string>
    <string name="toastCompraExito">Compra realizada con éxito</string>
    <string name="toastErrorCompra">Error en la compra</string>
    <string name="toastCarritoVacio">El carrito está vacío.</string>
    <string name="toastErrorCargar">No se pudieron cargar los contenidos del carrito.</string>
    <string name="toastErrorCargarCarrito">Error cargando carrito: </string>
    <string name="toastAccionCancelada">Acción cancelada</string>
    <string name="toastCrearExito">Cuenta creada con éxito</string>
    <string name="toastErrorObtenerID">No se pudo obtener el ID del cliente</string>
    <string name="toastIntroducirNota">Debes introducir una nota</string>
    <string name="toastNotaNumero">La nota debe ser un número</string>
    <string name="toastValoracionenviada">¡Valoración enviada correctamente!</string>
    <string name="toastErrorActNotaMedia">Error al actualizar la nota media</string>
    <string name="toastContenidoAñadidoCarrito">Contenido añadido al carrito</string>
    <string name="toastContraseñaCambiada">Contraseña cambiada correctamente</string>
    <string name="toastCorreoNoEncontrado">Correo no encontrado</string>

    <!-- Mas traduccion random -->
    <string name="toastCliente">cliente</string>
    <string name="toastClienteId">clienteId</string>
    <string name="toastEmail">email</string>
    <string name="toastContrasenya">contrasenya</string>
    <string name="toastCarrito">carrito/</string>
    <string name="toastComprar">comprar/</string>
    <string name="toastcarrito">Carrito</string>
    <string name="toastErrorCarga">Error al cargar lista contenido</string>
    <string name="toastEmailLeido">Email leido: </string>
    <string name="toastContrasenyaLeido">Contrasenya leida</string>
    <string name="toastContenido">Contenido</string>
</resources>

