<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/Poster"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:background="#2C2929"
        app:layout_constraintStart_toStartOf="@+id/floatingButtonReturn"
        app:layout_constraintTop_toBottomOf="@+id/floatingButtonReturn"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="216dp"
        android:layout_height="66dp"
        android:hint="Titulo de pelicula"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Poster"
        app:layout_constraintTop_toTopOf="@+id/Poster" />

    <TextView
        android:id="@+id/Nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/informacionNotaPelicula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/NotaMedia"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/informacionNotaMedia"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Precio"
        app:layout_constraintStart_toEndOf="@+id/Poster" />

    <TextView
        android:id="@+id/Precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/informacionPrecio"
        app:layout_constraintBottom_toTopOf="@+id/AddCarrito"
        app:layout_constraintStart_toEndOf="@+id/Poster" />

    <Button
        android:id="@+id/AddCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacionAñadirCarrito"
        app:layout_constraintBottom_toBottomOf="@+id/Poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Poster" />

    <TextView
        android:id="@+id/SinopsisTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/informacionSinopsis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Poster" />

    <TextView
        android:id="@+id/Descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis mauris vel elit rhoncus, sit amet tincidunt arcu maximus. Quisque tristique laoreet ante ac placerat. Etiam eu laoreet quam. Morbi placerat eget quam in ultrices. Etiam malesuada, dui ac varius sagittis, lectus ex sodales metus, at maximus massa tellus quis lacus. Phasellus iaculis, mauris aliquet sollicitudin pulvinar, justo lectus efficitur leo, in efficitur nunc justo id orci. Ut laoreet lorem sed lobortis aliquet. Curabitur eu sodales libero. Aliquam feugiat ligula non maximus dapibus. Nulla viverra, ipsum in sagittis pulvinar, eros purus ullamcorper arcu, non porta turpis tortor a velit. Nam porttitor eget odio in hendrerit. "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SinopsisTextView" />

    <TextView
        android:id="@+id/AutorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/informacionDirector"
        app:layout_constraintStart_toStartOf="@+id/Descripcion"
        app:layout_constraintTop_toBottomOf="@+id/Descripcion" />

    <TextView
        android:id="@+id/NotaMediaNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/NotaMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/NotaMedia"
        app:layout_constraintTop_toTopOf="@+id/NotaMedia" />

    <TextView
        android:id="@+id/precioValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0.0€"
        app:layout_constraintBottom_toBottomOf="@+id/Precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/Precio"
        app:layout_constraintTop_toTopOf="@+id/Precio" />

    <TextView
        android:id="@+id/NombreDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Nombre de Director"
        app:layout_constraintBottom_toBottomOf="@+id/AutorTextView"
        app:layout_constraintStart_toEndOf="@+id/AutorTextView"
        app:layout_constraintTop_toTopOf="@+id/AutorTextView" />

    <EditText
        android:id="@+id/notaCliente"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/Nota1"
        app:layout_constraintStart_toEndOf="@+id/Nota1" />

    <Button
        android:id="@+id/Valorar"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:text="@string/informacionValorar"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/notaCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notaCliente"
        app:layout_constraintTop_toTopOf="@+id/notaCliente" />

    <TextView
        android:id="@+id/Anyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="año de salida"
        app:layout_constraintBottom_toTopOf="@+id/NotaMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Poster"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />
</androidx.constraintlayout.widget.ConstraintLayout>